@@ -1,5 +1,9 @@
 1.0.0
 -----
+ * Call the start method of CassandraAdaptorDelegate to start periodic health check (CASSANDRASC-32)
+ * Avoid having sidecar's health response code depend on Cassandra's health information (CASSANDRASC-29)
+ * Add Stream SSTable API to Sidecar to stream SSTable components through zero copy streaming (CASSANDRASC-28)
+ * Fix broken sidecar gradle configuration due to Cassandra 40 version (CASSANDRASC-31)
  * Support multiple Cassandra versions with integration tests using Kubernetes (CASSANDRA-23)
  * RESTEasy integration with dynamically generated Swagger OpenAPI, Swagger UI and JAX-RS (CASSANDRASC-22)
  * Set up asciidoc based documentation (CASSANDRASC-15)
